Users CRUD Finished

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 PORT=8080
+
+MONGODB_CNN=mongodb+srv://jose_david_bolivar_mayora:HdEPFJ2gqjG4viHV@cluster0.t0gk4.mongodb.net/cafeDB
+
+USER=jose_david_bolivar_mayora
+PASS=HdEPFJ2gqjG4viHV
